--- a/app/src/main/res/layout/layout_list_dashboard_loan.xml
+++ b/app/src/main/res/layout/layout_list_dashboard_loan.xml
@@ -81,14 +81,41 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <RelativeLayout
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
+                    android:orientation="vertical"
 
                     >
+
+                    <com.app.l_pesa.common.CommonTextRegular
+                        android:id="@+id/txtAmountFirst"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_1sdp"
+                        android:fontFamily="@font/montserrat"
+                        android:textColor="@color/textColors"
+                        android:text="@string/app_name"
+                        android:gravity="center"
+                        android:textSize="@dimen/_11sdp"
+
+                        />
+
+                    <com.app.l_pesa.common.CommonTextRegular
+                        android:id="@+id/txtAmountSecond"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/_1sdp"
+                        android:fontFamily="@font/montserrat"
+                        android:textColor="@color/textColors"
+                        android:text="@string/app_name"
+                        android:gravity="center"
+                        android:textSize="@dimen/_11sdp"
+
+                        />
 
                     <com.app.l_pesa.common.CustomButtonRegular
                         android:id="@+id/btn_apply_loan"
@@ -104,7 +131,7 @@
                         android:textSize="@dimen/_9sdp"
                         />
 
-                </RelativeLayout>
+                </LinearLayout>
 
             </android.support.constraint.ConstraintLayout>
 
