--- a/app/src/main/res/layout/fragment_dashboard_layout.xml
+++ b/app/src/main/res/layout/fragment_dashboard_layout.xml
@@ -261,14 +261,16 @@
 
     </LinearLayout>
 
-
-    <android.support.v7.widget.RecyclerView
+     <android.support.v7.widget.RecyclerView
         android:id="@+id/loan_list"
         android:layout_marginEnd="@dimen/_10sdp"
         android:layout_marginStart="@dimen/_10sdp"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="4.70"
+        android:descendantFocusability="blocksDescendants"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
 
         />
 
