--- a/app/src/main/res/layout/content_loan_payment_history.xml
+++ b/app/src/main/res/layout/content_loan_payment_history.xml
@@ -2,10 +2,32 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/rootLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".loanHistory.view.LoanPaymentHistory"
     tools:showIn="@layout/activity_loan_payment_history">
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefreshLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        >
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rlPaybackHistory"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/_3sdp"
+
+            />
+
+    </android.support.v4.widget.SwipeRefreshLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
