--- a/app/src/main/res/layout/layout_payment_history_list.xml
+++ b/app/src/main/res/layout/layout_payment_history_list.xml
@@ -11,7 +11,7 @@
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/_5sdp"
         >
 
@@ -62,10 +62,8 @@
             android:contentDescription="@string/app_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView20"
-            app:srcCompat="@drawable/ic_request_date"
-            app:layout_constraintBottom_toBottomOf="parent"
-
-            />
+            app:layout_constraintEnd_toStartOf="@+id/textView39"
+            app:srcCompat="@drawable/ic_request_date" />
 
         <View
             android:id="@+id/viewVertical"
@@ -109,6 +107,52 @@
             app:layout_constraintStart_toEndOf="@+id/imageView36"
             app:layout_constraintTop_toBottomOf="@+id/textView36"
             app:layout_constraintEnd_toEndOf="parent" />
+
+        <TextView
+            android:id="@+id/textView39"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:gravity="center|start"
+            app:layout_constraintTop_toBottomOf="@+id/textView20"
+            app:layout_constraintEnd_toEndOf="@+id/viewVertical"
+            app:layout_constraintStart_toEndOf="@+id/imageView35" />
+
+        <TextView
+            android:id="@+id/textView40"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintTop_toBottomOf="@+id/textView39"
+            app:layout_constraintStart_toEndOf="@+id/imageView35"
+            app:layout_constraintEnd_toEndOf="@id/viewVertical"
+            />
+
+        <ImageView
+            android:id="@+id/imageView37"
+            android:layout_width="@dimen/_25sdp"
+            android:layout_height="@dimen/_25sdp"
+            app:srcCompat="@drawable/ic_approved_icon"
+            app:layout_constraintStart_toStartOf="@+id/viewVertical"
+            app:layout_constraintTop_toBottomOf="@+id/textView37"/>
+
+        <TextView
+            android:id="@+id/textView41"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageView37"
+            app:layout_constraintTop_toBottomOf="@+id/textView37"/>
+
+        <TextView
+            android:id="@+id/textView42"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imageView37"
+            app:layout_constraintTop_toBottomOf="@+id/textView41"/>
 
 
         <!--<TextView
