--- a/app/src/main/res/layout/layout_payment_history_list.xml
+++ b/app/src/main/res/layout/layout_payment_history_list.xml
@@ -4,14 +4,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
-
 
     <android.support.v7.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_margin="@dimen/_5sdp"
         >
 
@@ -38,27 +37,39 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center|start"
-            android:text="TextView"
+            android:textSize="@dimen/_11sdp"
+            android:text="@string/ref_no"
+            android:textColor="@color/light_text_color"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintStart_toEndOf="@+id/imageView18"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/viewVertical"
+            app:layout_constraintBottom_toTopOf="@+id/textView20"
              />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView20"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="center|start"
-            android:text="TextView222222"
             app:layout_constraintTop_toBottomOf="@+id/textView16"
             app:layout_constraintStart_toEndOf="@+id/imageView18"
             app:layout_constraintEnd_toStartOf="@+id/viewVertical"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/textColors"
+            android:fontFamily="@font/montserrat"
             />
 
         <ImageView
             android:id="@+id/imageView35"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginStart="@dimen/_3sdp"
             android:contentDescription="@string/app_name"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView20"
@@ -67,8 +78,8 @@
 
         <View
             android:id="@+id/viewVertical"
-            android:layout_width="@dimen/_1sdp"
-            android:layout_height="wrap_content"
+            android:layout_width="1px"
+            android:layout_height="@dimen/_60sdp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -80,6 +91,7 @@
 
         <ImageView
             android:id="@+id/imageView36"
+            android:contentDescription="@string/app_name"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
             android:layout_marginStart="@dimen/_3sdp"
@@ -93,36 +105,58 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="start|center"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/imageView36"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@+id/textView37"
+            android:textSize="@dimen/_11sdp"
+            android:text="@string/transfer_amount"
+            android:textColor="@color/light_text_color"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
             />
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView37"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
             app:layout_constraintStart_toEndOf="@+id/imageView36"
             app:layout_constraintTop_toBottomOf="@+id/textView36"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/textColors"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            />
 
         <TextView
             android:id="@+id/textView39"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
             android:gravity="center|start"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:textSize="@dimen/_11sdp"
+            android:text="@string/txt_id"
+            android:textColor="@color/light_text_color"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintTop_toBottomOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="@+id/viewVertical"
-            app:layout_constraintStart_toEndOf="@+id/imageView35" />
+            app:layout_constraintStart_toEndOf="@+id/imageView35"
+            app:layout_constraintBottom_toTopOf="@+id/textView40"/>
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView40"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/textColors"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
             app:layout_constraintTop_toBottomOf="@+id/textView39"
             app:layout_constraintStart_toEndOf="@+id/imageView35"
             app:layout_constraintEnd_toEndOf="@id/viewVertical"
@@ -130,41 +164,45 @@
 
         <ImageView
             android:id="@+id/imageView37"
+            android:contentDescription="@string/app_name"
             android:layout_width="@dimen/_25sdp"
             android:layout_height="@dimen/_25sdp"
+            android:layout_marginTop="@dimen/_7sdp"
+            android:layout_marginStart="@dimen/_3sdp"
             app:srcCompat="@drawable/ic_approved_icon"
             app:layout_constraintStart_toStartOf="@+id/viewVertical"
             app:layout_constraintTop_toBottomOf="@+id/textView37"/>
 
-        <TextView
+        <com.app.l_pesa.common.CommonTextRegular
             android:id="@+id/textView41"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
+            android:layout_marginTop="@dimen/_7sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imageView37"
-            app:layout_constraintTop_toBottomOf="@+id/textView37"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView37"
+            android:textSize="@dimen/_12sdp"
+            android:textColor="@color/textColors"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"/>
 
         <TextView
             android:id="@+id/textView42"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="TextView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/imageView37"
-            app:layout_constraintTop_toBottomOf="@+id/textView41"/>
+            app:layout_constraintTop_toBottomOf="@+id/textView41"
+            android:textSize="@dimen/_11sdp"
+            android:textColor="@color/light_text_color"
+            android:fontFamily="@font/montserrat"
+            android:paddingStart="@dimen/_3sdp"
+            android:paddingEnd="@dimen/_1sdp"
+            />
 
 
-        <!--<TextView
-            android:id="@+id/textView35"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="IIT"
-            android:gravity="center|start"
-            app:layout_constraintStart_toEndOf="@+id/imageView35"
-
-            />-->
-    </android.support.constraint.ConstraintLayout>
+      </android.support.constraint.ConstraintLayout>
 
     </android.support.v7.widget.CardView>
 
